--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇫🇷 法国-1.34MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.70MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-2.42MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-2.53MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 柬埔寨-1.92MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.71MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-2.39MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇯🇵 日本-2.76MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇸🇬 新加坡-342.6KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
   - {name: 🇸🇬 新加坡-3.52MB/s(Youtube:不良林), server: sg1.xz88.ml, port: 12464, type: vmess, uuid: 09a62e54-0f74-4002-8d45-5fe63e4bf2a2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 捷克-616.4KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 捷克-616.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 捷克-616.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 捷克-616.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 捷克-616.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 捷克-616.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 捷克-616.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活1天)香港-4.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 柬埔寨-1.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 捷克-616.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
