--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.53MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 柬埔寨-1.92MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.71MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-2.39MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.76MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇸🇬 新加坡-342.6KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇸🇬 新加坡-3.52MB/s(Youtube:不良林), server: sg1.xz88.ml, port: 12464, type: vmess, uuid: 09a62e54-0f74-4002-8d45-5fe63e4bf2a2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 捷克-616.4KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-3.73MB/s(Youtube:不良林), server: in-tw-1.iivvppnn.info, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-4.00MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-314.7KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-313.4KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65038, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.03MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 未知国家-1.43MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 捷克-616.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 未知国家-1.43MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 捷克-616.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 未知国家-1.43MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 捷克-616.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 未知国家-1.43MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 捷克-616.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 未知国家-1.43MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 捷克-616.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 未知国家-1.43MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 捷克-616.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 未知国家-1.43MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 柬埔寨-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 捷克-616.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 未知国家-1.43MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
