--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-3.73MB/s(Youtube:不良林), server: in-tw-1.iivvppnn.info, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-4.00MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-314.7KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-313.4KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65038, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.03MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 未知国家-1.43MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.59MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-314.7KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 捷克-388.2KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.99MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: 6f48efb9-3817-4652-832f-fd04d93ebbc1, sni: v5.tgfaka.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 未知国家-1.12MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
-      - 未知国家-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 捷克-388.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
-      - 未知国家-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 捷克-388.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
-      - 未知国家-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 捷克-388.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
-      - 未知国家-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 捷克-388.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
-      - 未知国家-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 捷克-388.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
-      - 未知国家-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 捷克-388.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-313.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
-      - 未知国家-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 捷克-388.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
